fixed a center spacing issue

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -236,7 +236,8 @@ article.post {
 
 .post-date,
 .post-categories {
-	font-size: 14px;
+  font-size: 14px;
+  display: flex;
 }
 
 .post .category-link,
@@ -246,7 +247,7 @@ article.post {
 }
 
 .blog-icon {
-	margin-right: 5px;
+	margin-right: 8px;
 }
 
 
